Reefact.BookExamples.Antlr4/Chapter_04/04.4/04.4.2/.antlr/Data.g4
grammar Data;

file	:	group+ ;

group	:	INT sequence[$INT.int] ;

sequence[int n]
locals [int i=1]
		:	( {$i<=$n}? INT {$i++;} )*	// match n integers
		;

INT		:	[0-9]+ ;					// match integers
WS		:	[ \t\n\r]+ -> skip ;		// toss out all whitespaces
